Completed Auth UI

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,7 @@
-{}
+{
+    "auth_title": "Всё случится\nСЕГОДНЯ",
+    "google": "Войти через Google",
+    "apple": "Войти через Apple",
+    "privacy_title": "Осуществляя вход, вы соглашаетесь с",
+    "privacy_subtitle": "Политикой конфиденциальности"
+}
