--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,5 +3,8 @@
     "google": "Войти через Google",
     "apple": "Войти через Apple",
     "privacy_title": "Осуществляя вход, вы соглашаетесь с",
-    "privacy_subtitle": "Политикой конфиденциальности"
+    "privacy_subtitle": "Политикой конфиденциальности",
+    "events": "События",
+    "response": "Реакции",
+    "profile": "Профиль"
 }
