Updated localization + added bottom sheet in Events screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,5 +11,7 @@
     "edit": "Редактировать",
     "responses": "Отклики",
     "offers": "Предложения",
-    "variants": "Варианты в "
+    "variants": "Варианты в ",
+    "chooseCity": "Выберите город",
+    "done": "Готово"
 }
