--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,5 +13,7 @@
     "offers": "Предложения",
     "variants": "Варианты в ",
     "chooseCity": "Выберите город",
-    "done": "Готово"
+    "done": "Готово",
+    "create_event": "Создание",
+    "edit_profile": "Редактирование"
 }
