--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,7 +5,7 @@
     "privacy_title": "Осуществляя вход, вы соглашаетесь с",
     "privacy_subtitle": "Политикой конфиденциальности",
     "events": "События",
-    "response": "Реакции",
+    "activity": "Активность",
     "profile": "Профиль",
     "create": "Создать",
     "edit": "Редактировать",
@@ -15,5 +15,6 @@
     "chooseCity": "Выберите город",
     "done": "Готово",
     "create_event": "Создание",
-    "edit_profile": "Редактирование"
+    "edit_profile": "Редактирование",
+    "exit": "Выйти из аккаунта"
 }
