--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -16,5 +16,18 @@
     "done": "Готово",
     "create_event": "Создание",
     "edit_profile": "Редактирование",
-    "exit": "Выйти из аккаунта"
+    "exit": "Выйти из аккаунта",
+    "send": "Отправить",
+    "create_city": "Город события*",
+    "create_city_hint": "Тольятти или Самара",
+    "create_type": "Тип события*",
+    "create_type_hint": "Свидание, прогулка или кино?",
+    "create_members": "Количество участников*",
+    "create_members_hint": "от 1 до 10",
+    "create_desc": "Описание события*",
+    "create_desc_value": "Расскажите о событии. Запрещено указывать контакты.",
+    "cancel": "Отмена",
+    "choose_city": "Выберите город",
+    "choose_type": "Выберите тип события",
+    "choose_count": "Выберите количество участников"
 }
