--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,5 +29,8 @@
     "cancel": "Отмена",
     "choose_city": "Выберите город",
     "choose_type": "Выберите тип события",
-    "choose_count": "Выберите количество участников"
+    "choose_count": "Выберите количество участников",
+    "close": "Закрыть",
+    "error": "Ошибка",
+    "error_profile": "Заполните профиль, прежде чем создавать события."
 }
