--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -19,18 +19,36 @@
     "exit": "Выйти из аккаунта",
     "send": "Отправить",
     "create_city": "Город события*",
-    "create_city_hint": "Тольятти или Самара",
+    "create_city_hint": "Пример: Самара",
     "create_type": "Тип события*",
-    "create_type_hint": "Свидание, прогулка или кино?",
+    "create_type_hint": "Пример: Прогулка",
     "create_members": "Количество участников*",
-    "create_members_hint": "от 1 до 10",
+    "create_members_hint": "Пример: 4",
     "create_desc": "Описание события*",
-    "create_desc_value": "Расскажите о событии. Запрещено указывать контакты.",
+    "create_desc_value": "Пример: Приглашаю сегодня прогуляться в Парке.",
     "cancel": "Отмена",
     "choose_city": "Выберите город",
     "choose_type": "Выберите тип события",
     "choose_count": "Выберите количество участников",
     "close": "Закрыть",
     "error": "Ошибка",
-    "error_profile": "Заполните профиль, прежде чем создавать события."
+    "success": "Успешно",
+    "error_profile": "Заполните профиль, прежде чем создавать события.",
+    "create_event_success": "Поздравляем, ваше событие опубликовано.",
+    "age_title": "Возраст*",
+    "name_title": "Имя*",
+    "work_title": "Профессия или род занятий*",
+    "about_title": "О себе*",
+    "vk_title": "Ссылка на VK*",
+    "telegram_title": "Ссылка на Telegram*",
+    "avatar_title": "Ваша фотография*",
+    "save": "Сохранить",
+    "vk_hint": "Пример: https://vk.com/dsbelikov",
+    "telegram_hint": "Пример: https://t.me/daniilbelikov",
+    "name_hint": "Пример: Василий",
+    "age_hint": "Пример: 23",
+    "work_hint": "Пример: Фитнес-тренер",
+    "about_hint": "Пример: Фитнес-тренер из Тольятти, который любит активный образ жизни и общение с интересными людьми. Верю в то, что можно быть в форме и без вредных привычек. Если ты также ценишь спорт и здоровый образ жизни, давай познакомимся!",
+    "camera": "Камера",
+    "gallery": "Галерея"
 }
