--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -50,5 +50,6 @@
     "work_hint": "Пример: Фитнес-тренер",
     "about_hint": "Пример: Фитнес-тренер из Тольятти, который любит активный образ жизни и общение с интересными людьми. Верю в то, что можно быть в форме и без вредных привычек. Если ты также ценишь спорт и здоровый образ жизни, давай познакомимся!",
     "camera": "Камера",
-    "gallery": "Галерея"
+    "gallery": "Галерея",
+    "edit_profile_success": "Ваш профиль обновлен."
 }
