--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -8,6 +8,7 @@
     "activity": "Активность",
     "profile": "Профиль",
     "create": "Создать",
+    "create_new_event": "Создать событие",
     "edit": "Редактировать",
     "responses": "Отклики",
     "offers": "Предложения",
@@ -31,7 +32,7 @@
     "choose_type": "Выберите тип события",
     "choose_count": "Выберите количество участников",
     "close": "Закрыть",
-    "error": "Ошибка",
+    "error": "Предупреждение",
     "success": "Успешно",
     "error_profile": "Заполните профиль, прежде чем создавать события.",
     "create_event_success": "Поздравляем, ваше событие опубликовано.",
@@ -51,5 +52,12 @@
     "about_hint": "Пример: Фитнес-тренер из Тольятти, который любит активный образ жизни и общение с интересными людьми. Верю в то, что можно быть в форме и без вредных привычек. Если ты также ценишь спорт и здоровый образ жизни, давай познакомимся!",
     "camera": "Камера",
     "gallery": "Галерея",
-    "edit_profile_success": "Ваш профиль обновлен."
+    "edit_profile_success": "Ваш профиль обновлен.",
+    "choose_age": "Выберите ваш возраст",
+    "empty_hint": "Кажется, в вашем городе пока нет событий. Может создадим собственное?",
+    "forward": "Вперёд!",
+    "button_super": "Супер!",
+    "end_text": "Видимо, это все события на сегодня. Предлагаем пройтись по событиям ещё раз или создать собственное.",
+    "again": "Начать заново",
+    "change_city": "Сменить город"
 }
