--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -54,10 +54,12 @@
     "gallery": "Галерея",
     "edit_profile_success": "Ваш профиль обновлен.",
     "choose_age": "Выберите ваш возраст",
-    "empty_hint": "Кажется, в вашем городе пока нет событий. Может создадим собственное?",
+    "empty_hint": "Кажется, в вашем городе нет событий. Может создадим собственное?",
     "forward": "Вперёд!",
     "button_super": "Супер!",
-    "end_text": "Видимо, это все события на сегодня. Предлагаем пройтись по событиям ещё раз или создать собственное.",
+    "end_text": "Видимо, это все события на сегодня. Что будем делать дальше?",
     "again": "Начать заново",
-    "change_city": "Сменить город"
+    "change_city": "Сменить город",
+    "responses_empty": "Вы не откликались на события других пользователей.",
+    "offers_empty": "Вы не создавали события."
 }
