--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -17,7 +17,7 @@
     "done": "Готово",
     "create_event": "Создание",
     "edit_profile": "Редактирование",
-    "exit": "Выйти из аккаунта",
+    "exit": "Выйти",
     "send": "Отправить",
     "create_city": "Город события*",
     "create_city_hint": "Пример: Самара",
@@ -61,5 +61,9 @@
     "again": "Начать заново",
     "change_city": "Сменить город",
     "responses_empty": "Вы не откликались на события других пользователей.",
-    "offers_empty": "Вы не создавали события."
+    "offers_empty": "Вы не создавали события.",
+    "write_support": "Написать в поддержку",
+    "delete_account": "Удалить аккаунт",
+    "delete_text": "Вы уверены, что хотите удалить аккаунт?",
+    "delete": "Удалить"
 }
