--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -65,5 +65,7 @@
     "write_support": "Написать в поддержку",
     "delete_account": "Удалить аккаунт",
     "delete_text": "Вы уверены, что хотите удалить аккаунт?",
-    "delete": "Удалить"
+    "delete": "Удалить",
+    "error_common": "Ошибка",
+    "error_social": "У вас не заполнен профиль."
 }
