--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -67,5 +67,8 @@
     "delete_text": "Вы уверены, что хотите удалить аккаунт?",
     "delete": "Удалить",
     "error_common": "Ошибка",
-    "error_social": "У вас не заполнен профиль."
+    "error_social": "У вас не заполнен профиль.",
+    "not_set": "Не установлено",
+    "no_info": "Нажмите кнопку «Редактировать», чтобы заполнить профиль.",
+    "social_subtitle": "Информация будет доступна только тем пользователям, с которыми у вас совпадения."
 }
