--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,8 +2,8 @@
     "auth_title": "Всё случится\nСЕГОДНЯ",
     "google": "Войти через Google",
     "apple": "Войти через Apple",
-    "privacy_title": "Осуществляя вход, вы соглашаетесь с",
-    "privacy_subtitle": "Политикой конфиденциальности",
+    "privacy_title": "Осуществляя вход, вы принимаете",
+    "privacy_subtitle": "Политику конфиденциальности",
     "events": "События",
     "activity": "Активность",
     "profile": "Профиль",
@@ -32,7 +32,7 @@
     "choose_type": "Выберите тип события",
     "choose_count": "Выберите количество участников",
     "close": "Закрыть",
-    "error": "Предупреждение",
+    "attention": "Внимание",
     "success": "Успешно",
     "error_profile": "Заполните профиль, прежде чем создавать события.",
     "create_event_success": "Поздравляем, ваше событие опубликовано.",
@@ -56,7 +56,6 @@
     "choose_age": "Выберите ваш возраст",
     "empty_hint": "Кажется, в вашем городе нет событий. Может создадим собственное?",
     "forward": "Вперёд!",
-    "button_super": "Супер!",
     "end_text": "Видимо, это все события на сегодня. Что будем делать дальше?",
     "again": "Начать заново",
     "change_city": "Сменить город",
@@ -70,5 +69,6 @@
     "error_social": "У вас не заполнен профиль.",
     "not_set": "Не установлено",
     "no_info": "Нажмите кнопку «Редактировать», чтобы заполнить профиль.",
-    "social_subtitle": "Информация будет доступна только тем пользователям, с которыми у вас совпадения."
+    "social_subtitle": "Информация будет доступна только тем пользователям, с которыми у вас совпадения.",
+    "error_view_text": "Что-то пошло не так.\nПерезапустите приложение."
 }
