--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -32,8 +32,8 @@
     "choose_type": "Выберите тип события",
     "choose_count": "Выберите количество участников",
     "close": "Закрыть",
-    "attention": "Внимание",
-    "success": "Успешно",
+    "attention": "Внимание!",
+    "success": "Успешно!",
     "error_profile": "Заполните профиль, прежде чем создавать события.",
     "create_event_success": "Поздравляем, ваше событие опубликовано.",
     "age_title": "Возраст*",
