--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -30,7 +30,7 @@
     "cancel": "Отмена",
     "choose_city": "Выберите город",
     "choose_type": "Выберите тип события",
-    "choose_count": "Выберите количество участников",
+    "choose_count": "Выберите количество участников (включая вас)",
     "close": "Закрыть",
     "attention": "Внимание!",
     "success": "Успешно!",
@@ -70,5 +70,6 @@
     "not_set": "Не установлено",
     "no_info": "Нажмите кнопку «Редактировать», чтобы заполнить профиль.",
     "social_subtitle": "Информация будет доступна только тем пользователям, с которыми у вас совпадения.",
-    "error_view_text": "Что-то пошло не так.\nПерезапустите приложение."
+    "error_view_text": "Что-то пошло не так.\nПерезапустите приложение.",
+    "interesting": "Интересно"
 }
