Updated Events screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -71,5 +71,7 @@
     "no_info": "Нажмите кнопку «Редактировать», чтобы заполнить профиль.",
     "social_subtitle": "Информация будет доступна только тем пользователям, с которыми у вас совпадения.",
     "error_view_text": "Что-то пошло не так.\nПерезапустите приложение.",
-    "interesting": "Интересно"
+    "interesting": "Интересно",
+    "sended": "Отправлено",
+    "your": "Ваше"
 }
